--- a/porfolio_Pierini/src/app/components/footer/footer.component.html
+++ b/porfolio_Pierini/src/app/components/footer/footer.component.html
@@ -1,15 +1,17 @@
-<div class="row">
-    <footer>
-    <div class="col-sm-12 col-md-3 col-lg-3 personal">
+<div class="row" >
+    <footer >
+    <div class="col-sm-12 col-md-3 col-lg-3 personal" >
     
-        <h6>Pierini Nahuel Nicolas </h6>
+        <h6>Pierini Nahuel Nicolás</h6>
         <h6>corporing</h6>
     </div> 
     <div class="col-sm-12 col-md-4 col-lg-4 contact">
         <h5>Contacto</h5>
-        <h6>email del creador</h6>
-        <h6>direccion de las oficinas</h6>
-        <h6>telefonos de la empresa</h6>
+        <h6>nahuel.pierini90@hotmail.com</h6>
+        <h6>dirección</h6>
+        <h6>pasaje j galisto 4073</h6>
+        <h6>telefono:</h6>
+        <h6>3425428918</h6>
     </div>
     </footer>
     
