--- a/porfolio_Pierini/src/app/components/education/new-education.component.html
+++ b/porfolio_Pierini/src/app/components/education/new-education.component.html
@@ -1,5 +1,5 @@
-<div class="row " style="background: #672067;" >
-    <div class="container col-6" style="border: 5px solid #000000 ; border-radius: 10px;">
+<div class="row " style="background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%); width: 100%;" >
+  <div class="container col-6" >
 <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
     <div class="form-outline ">
         <label class="form-label" for="nameE">institucion</label>
@@ -19,8 +19,8 @@
         
       </div>
       <div class="form-outline">
-        <label class="form-label" for="descE">Titulo</label>
-        <input type="text" id="descE" class="form-control" name="descE" [(ngModel)]="descE" required/>
+        <label class="form-label" for="descEd">Titulo</label>
+        <input type="text" id="descEd" class="form-control" name="descEd" [(ngModel)]="descEd" required/>
         
       </div>
       <button class="btn btn-primary btn-lg btn-block" type="submit">Save</button>
