--- a/porfolio_Pierini/src/app/components/experience/experience.component.css
+++ b/porfolio_Pierini/src/app/components/experience/experience.component.css
@@ -1,10 +1,13 @@
 .row {
-    background: linear-gradient(90deg, rgba(210,50,199,1) 0%, rgba(13,12,154,1) 50%, rgba(252,69,251,0.6979385504201681) 100%);
-    color: #ffffff;
- 
+    background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%);
+    color: #888888d9;
+    text-align: center;
+    
+    font-family: 'Times New Roman', Times, serif; 
+    text-shadow: 5px 8px 10px #000000;
 }
 
-ul {
+.experience {
     width: auto;
     border: 5px solid #000;
     border-radius: 10px;
@@ -14,10 +17,13 @@ ul {
 
 
 
+
 button {
     background: transparent;
     border: transparent;
 }
-h1,h2,h3,p{
-    text-align: center;
+
+
+i{
+    font-size: 150%;
 }
