--- a/porfolio_Pierini/src/app/components/experience/new-experience.component.html
+++ b/porfolio_Pierini/src/app/components/experience/new-experience.component.html
@@ -1,5 +1,5 @@
-<div class="row " style="background: #672067; " >
-    <div class="container col-6" style="border: 5px solid #000000 ; border-radius: 10px;">
+<div class="row " style="background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%); width: 100%;" >
+  <div class="container col-6" style="border: 5px solid #000000 ; border-radius: 10px;">
 <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
     <div class="form-outline ">
         <label class="form-label" for="nameE">Nombre de la Empresa</label>
