--- a/porfolio_Pierini/src/app/components/footer/footer.component.css
+++ b/porfolio_Pierini/src/app/components/footer/footer.component.css
@@ -1,7 +1,6 @@
 .row{
     padding: 20px;
-    background: linear-gradient(90deg, rgba(210,50,199,1) 0%, rgba(13,12,154,1) 50%, rgba(252,69,251,0.6979385504201681) 100%);    color: #ffffff;
-   
+   background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%); 
 
 }
 .personal{
