--- a/porfolio_Pierini/src/app/components/hys/edit-hys.component.css
+++ b/porfolio_Pierini/src/app/components/hys/edit-hys.component.css
@@ -1,5 +1,11 @@
 .container{
-    margin: 17.5%;
-    box-shadow: 5px 5px 5px #000  ;
+    margin-top: 10%;
+    margin-bottom: 13%;
+    box-shadow: 10px 5px 5px #000  ;
     background: gray;
+    padding: 5PX;
+}
+button{
+    margin-top: 10PX;
+   
 }
