--- a/porfolio_Pierini/src/app/components/login/login.component.html
+++ b/porfolio_Pierini/src/app/components/login/login.component.html
@@ -1,9 +1,12 @@
-<section class="custom" style="background: rgb(190, 19, 196);">
-  <div class="container py-5 ">
-    <div class="row d-flex justify-content-center align-items-center ">
+<div class="row col-sm-12 col-md-12 col-lg-12">
+  <video id="my-video" class="video" autoplay muted loop>
+    <source src="https://static.videezy.com/system/resources/previews/000/038/534/original/Binary_Code.mp4" type="video/mp4">
+ </video>
+  <div class="container py-5 vh-100 ">
+    <div class="d-flex justify-content-center align-items-center ">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card shadow-2-strong" style="border-radius: 20px; background: #000000; ">
-          <div class="card-body p-5 text-center" style="background: #bbadbb; border-radius: 30px;">
+          <div class="card-body p-5 text-center" style="background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%); border-radius: 30px;">
 
             <h3 class="mb-5">Sign in</h3>
             <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
@@ -20,10 +23,10 @@
               </div>
               <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
             </form>
-
+                  <br><a routerLink="/reg"> crear cuenta Usuario</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
+</div>
