--- a/porfolio_Pierini/src/app/components/proyects/proyects.component.css
+++ b/porfolio_Pierini/src/app/components/proyects/proyects.component.css
@@ -1,20 +1,23 @@
-
-h3 {
-    color: #563298;
-    
-}
-p{
-    color: yellow;
-}
-  
 .row{
-    background: linear-gradient(90deg, rgba(210,50,199,1) 0%, rgba(13,12,154,1) 50%, rgba(252,69,251,0.6979385504201681) 100%);   
+    padding: 20px;
+    background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%);    text-shadow: 5px 8px 10px rgb(0, 0, 0);
+    color: #888888d9;
+   text-align: center;
+   font-family: 'Times New Roman', Times, serif;
 }
-h1{
-    text-align: center;
+button {
+    background: transparent;
+    border: transparent;
 }
+div{
+    background: transparent;
+    display: inline-block;
+}
+i{
+    font-size: 150%;
+}
+
 .carousel {
     background: transparent;
-    
-    
+   
 }
