--- a/porfolio_Pierini/src/app/components/proyects/proyects.component.html
+++ b/porfolio_Pierini/src/app/components/proyects/proyects.component.html
@@ -1,53 +1,20 @@
 <div class="row">
   <h1>Proyectos</h1>
-  <div id="proyects" class="carousel slide col-sm-4 col-md-6 col-lg-8" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
-   
-    <div class="carousel-inner col-sm-4 col-md-6 col-lg-4">
-      <div class="col-sm-4 col-md-6 col-lg-8"></div>
-      <div class="carousel-item active ">
-        
-        <img src=".../../../../../assets/perfil.jpg" class=" h-20 w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>veterinaria cuki</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit minus dolore beatae quidem veritatis
-            accusantium, amet repellat culpa assumenda ipsa totam quas, nulla ipsum dolor atque quaerat eum. A,
-            consectetur.</p>
+
+  <button id="button-add-about" type="button" class="button-add" routerLink="/newProj"> <img src="assets/add.ico" alt=""
+      *ngIf="isLogged"> </button>
+  <div id="proyects" class="carousel slide" data-bs-ride="carousel" *ngFor="let proj of proj">
+    <h2>{{proj.name}} </h2>
+      <div class="card card-body">
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <img src={{proj.imgP}} class=" h-20 w-100" alt="...">
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src=".../../../../../assets/perfil.jpg" class=" d-block h-20 w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>portafolio</h3>
-          <p><b>>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eum nesciunt tenetur quas quis, itaque
-              quisquam et deleniti suscipit quia optio tempore necessitatibus animi error voluptates, molestiae ab.
-              Dolorem, nemo..</b></p>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <p>{{proj.descP}} </p>
         </div>
+        <button id="button-edit" class="button-edit " routerLink="/editProj/{{proj.id}}"><i
+            class="bi bi-pencil-square"></i></button>
+        <button id="button-erase" (click)="delete(proj.id)"><i class="bi bi-trash"></i></button>
+
       </div>
-      <div class="carousel-item">
-        <img src=".../../../../../assets/perfil.jpg" class=" h- 20 w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h3>Otro projecto</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam cupiditate excepturi quisquam placeat
-            mollitia totam, reiciendis doloremque vero tempora aut aspernatur asperiores odio reprehenderit assumenda
-            voluptatibus qui quo consectetur nulla?</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div>
+  
