--- a/porfolio_Pierini/src/app/components/about/about.component.css
+++ b/porfolio_Pierini/src/app/components/about/about.component.css
@@ -20,8 +20,9 @@ div{
 .img-fluid{
     border: 5px ridge #852035 ;
     border-radius: 50%;
-    width: 100%;
-
+    max-width: 100%;
+    max-height: 100%;
+    box-shadow: 10px 5px 5px #000  ;
 }
 button {
     background: transparent;
