--- a/porfolio_Pierini/src/app/components/about/about.component.html
+++ b/porfolio_Pierini/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 
     <div class="row" *ngIf="person" >
-            <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" >
+            <div class="col-xs-2 col-sm-4 col-md-2 col-lg-2" >
                 <img src={{person.imgP}} class="img-fluid">
              </div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="name lastName"  >
@@ -11,9 +11,9 @@
                
                     <h2>Acerca de mí</h2>
                     <p>{{person.descP}}</p>
-                
+                    <div *ngIf="isAdmin.length >1"> <button id="button-edit" class="button-edit-about " routerLink="/editAbout/1" *ngIf="isLogged"> <i class="bi bi-pencil-square"></i> </button></div>
                
-               <button id="button-edit" class="button-edit-about " routerLink="/editAbout/1" *ngIf="isLogged"> <i class="bi bi-pencil-square"></i> </button>
+              
                  
             
         </div>
