--- a/porfolio_Pierini/src/app/components/experience/experience.component.html
+++ b/porfolio_Pierini/src/app/components/experience/experience.component.html
@@ -2,16 +2,18 @@
     <H1>Experiencia Laboral</H1>
     <div class="col-lg-8"></div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-        <button id="button-add-about" type="button" class="button-add" routerLink="/newExperience"*ngIf="isLogged"> <i class="bi bi-node-plus-fill"></i></button>
+        <div *ngIf="isAdmin.length >1">        <button id="button-add-about" type="button" class="button-add" routerLink="/newExperience"*ngIf="isLogged"> <i class="bi bi-node-plus-fill"></i></button>
+</div>
     </div>
     <div class="col-lg-1 "></div>
     <div class="col-lg-10">
         <div class="experience" *ngFor="let Experience of exp" >
-            <button id="button-edit" class="button-edit " routerLink="/editExperience/{{Experience.id}}" > <i class="bi bi-pencil-square"></i> </button>
+            <div *ngIf="isAdmin.length >1"> <button id="button-edit" class="button-edit " routerLink="/editExperience/{{Experience.id}}" > <i class="bi bi-pencil-square"></i> </button>
             <button id="button-erase" (click)="delete(Experience.id)" ><i class="bi bi-trash"></i></button>
+           </div>
             <div><h2><u>EMPRESA</u> </h2><br>
                 <h2>{{Experience.nameE}}</h2>
-                <h6>({{Experience.dateI}}  --  {{Experience.dateF}}) </h6>
+                <h6>Desde: ({{Experience.dateI}})-  Hasta:  ({{Experience.dateF}}) </h6>
 
             </div>
             <h2><u> Ocupación: </u></h2> <h2> {{Experience.descE}}</h2> 
