--- a/porfolio_Pierini/src/app/components/login/login.component.html
+++ b/porfolio_Pierini/src/app/components/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="row col-sm-12 col-md-12 col-lg-12">
-  <video id="my-video" class="video" autoplay muted loop>
+  <video id="my-video" class="video col-sm-12 col-md-12 col-lg-12" s autoplay muted loop>
     <source src="https://static.videezy.com/system/resources/previews/000/038/534/original/Binary_Code.mp4" type="video/mp4">
  </video>
+
   <div class="container py-5 vh-100 ">
     <div class="d-flex justify-content-center align-items-center ">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -11,17 +12,19 @@
             <h3 class="mb-5">Sign in</h3>
             <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
               <div class="form-outline mb-4">
+                <label class="form-label" for="typeEmailX-2">User</label>
                 <input type="text" id="nameUser" name="nameUser" class="form-control form-control-lg"
                   [(ngModel)]="nameUser" required />
-                <label class="form-label" for="typeEmailX-2">User</label>
+                
               </div>
 
               <div class="form-outline mb-4">
+                <label class="form-label" for="typePasswordX-2">Password</label>
                 <input type="password" id="password" name="password" class="form-control form-control-lg"
                   [(ngModel)]="password" required />
-                <label class="form-label" for="typePasswordX-2">Password</label>
+                
               </div>
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+              <br><button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
             </form>
                   <br><a routerLink="/reg"> crear cuenta Usuario</a>
           </div>
