--- a/porfolio_Pierini/src/app/components/proyects/proyects.component.css
+++ b/porfolio_Pierini/src/app/components/proyects/proyects.component.css
@@ -2,8 +2,8 @@
     padding: 20px;
     background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%);    text-shadow: 5px 8px 10px rgb(0, 0, 0);
     color: #888888d9;
-   text-align: center;
-   font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 button {
     background: transparent;
@@ -13,11 +13,18 @@ div{
     background: transparent;
     display: inline-block;
 }
+.card{
+    border-radius: 5px;
+    border: 5px solid #000000;
+    box-shadow: 10px 5px 5px #000  ;
+}
 i{
     font-size: 150%;
 }
 
-.carousel {
+img {
+    max-width: 50%;
+    max-height: 50%;
     background: transparent;
    
 }
