--- a/porfolio_Pierini/src/app/components/register/register.component.html
+++ b/porfolio_Pierini/src/app/components/register/register.component.html
@@ -1,9 +1,9 @@
-<div class="row "
-    style="background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%); ">
+<div class="row col-sm-12 col-md-12 col-lg-12"
+    style="background: linear-gradient(90deg, rgba(12, 132, 192, 0.9) 0%, rgb(8, 8, 204) 50%, rgba(209, 12, 209, 0.849) 100%); width: 100%; min-height:720px;">
     <div class="container col-6" style="border: 5px solid #000000 ; border-radius: 10px;">
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
             <div class="form-outline ">
-                <label class="form-label" for="name">Nombre habilidad</label>
+                <label class="form-label" for="name">Nombre y apellido</label>
                 <input type="text" id="name" class="form-control" name="name" [(ngModel)]="name" required />
 
                 <div class="form-outline">
